# autoencoders

./: .gitignore  Makefile  README.md  pyproject.toml
data/: articles.csv  naked_and_afraid.csv
notebooks/: CNN_Autoencoder.ipynb  Dense_Autoencoder.ipynb  Largados_e_Pelados.ipynb  Sistemas_de_Recomendação.ipynb
