[tool.poetry]
name = "autoencoders"
version = "0.1.0"
description = ""
authors = ["Arnaldo Gualberto <arnaldo.g12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
tensorflow-macos = {version = "2.9", platform = "darwin"}
tensorflow-metal = {version = "0.5", platform = "darwin"}
scipy = "^1.11.1"
pandas = "^2.0.3"
scikit-learn = "^1.3.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
matplotlib = "^3.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
